bk_ida/gccida/c3/print_exp
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_exp/src/sched-vis.c:688:14: error: expected ';' at end of declaration
void *__ptr32 *v43; // rcx 
             ^
             ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_exp/src/sched-vis.c:708:7: error: redefinition of '__ptr32'
void *__ptr32 *v63; // rcx 
      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_exp/src/sched-vis.c:688:7: note: previous definition is here
void *__ptr32 *v43; // rcx 
      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_exp/src/sched-vis.c:708:14: error: expected ';' at end of declaration
void *__ptr32 *v63; // rcx 
             ^
             ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_exp/src/sched-vis.c:746:27: error: expected expression
print_pattern( s, *( rtx *)&rtwint[2 * v8 + 2], verbose); 
                          ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_exp/src/sched-vis.c:880:23: error: expected ')'
print_value( s, ( rtx)v68, verbose); 
                      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_exp/src/sched-vis.c:880:12: note: to match this '('
print_value( s, ( rtx)v68, verbose); 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_exp/src/sched-vis.c:1086:18: error: expected expression
v68 = *( _OWORD *)&x->fld[0].rtwint; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_exp/src/sched-vis.c:1086:10: error: use of undeclared identifier '_OWORD'
v68 = *( _OWORD *)&x->fld[0].rtwint; 
         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_exp/src/sched-vis.c:1096:25: error: assigning to 'uint64' (aka 'unsigned long long') from incompatible type 'struct rtx_def'
*( ( _QWORD *)&v68 + 1) = x[1]; 
                        ^ ~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_exp/src/sched-vis.c:1106:18: error: expected expression
v68 = *( _OWORD *)&x->fld[0].rtwint; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_exp/src/sched-vis.c:1106:10: error: use of undeclared identifier '_OWORD'
v68 = *( _OWORD *)&x->fld[0].rtwint; 
         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_exp/src/sched-vis.c:1112:18: error: expected expression
v68 = *( _OWORD *)&x->fld[0].rtwint; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_exp/src/sched-vis.c:1112:10: error: use of undeclared identifier '_OWORD'
v68 = *( _OWORD *)&x->fld[0].rtwint; 
         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_exp/src/sched-vis.c:1113:16: error: use of undeclared identifier 'off_709FBB'
v14 = ( char *)off_709FBB; 
               ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_exp/src/sched-vis.c:1117:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v15 = ( __int64)x[1]; 
                ^~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_exp/src/sched-vis.c:1127:25: error: assigning to 'uint64' (aka 'unsigned long long') from incompatible type 'struct rtx_def'
*( ( _QWORD *)&v68 + 1) = x[1]; 
                        ^ ~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_exp/src/sched-vis.c:1148:18: error: expected expression
v68 = *( _OWORD *)&x->fld[0].rtwint; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_exp/src/sched-vis.c:1148:10: error: use of undeclared identifier '_OWORD'
v68 = *( _OWORD *)&x->fld[0].rtwint; 
         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_exp/src/sched-vis.c:1152:18: error: expected expression
v68 = *( _OWORD *)&x->fld[0].rtwint; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_exp/src/sched-vis.c:1152:10: error: use of undeclared identifier '_OWORD'
v68 = *( _OWORD *)&x->fld[0].rtwint; 
         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_exp/src/obj/sched-vis.o] Error 1
